# kubeconfig-bikeshed

./: .conform.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  kbs.cast  rustfmt.toml
.github/workflows/: build-test.yaml  conform.yaml  release.yaml  rust.yaml
docs/: kbs.cast
docs/development/: README.md
src/: cmd.rs  config.rs  error.rs  kubeconfig.rs  main.rs
src/cmd/: import.rs  label.rs  list.rs  mod.rs  move.rs  path.rs  prune.rs  remove.rs  shell.rs  use.rs  version.rs
src/cmd/import/: config.rs  error.rs  kubeconfig.rs  mod.rs
src/cmd/list/: mod.rs
src/cmd/shell/: completion.rs  magic.rs  mod.rs
src/cmd/shell/files/bash/: kbs.source
src/cmd/shell/files/zsh/: kbs.source
src/cmd/shell_magic/: mod.rs  zsh.rs
src/cmd/shell_magic/files/zsh/: kbs.source
src/cmd/switch/: mod.rs
src/config/: metadata.rs  mod.rs  tests.rs
src/errors/: mod.rs
src/kubeconfig/: import.rs  list.rs  mod.rs  tests.rs
src/metadata/: errors.rs  labels.rs  mod.rs  selectors.rs
tests/: binary.rs  import.rs  label.rs  list.rs  move.rs  prune.rs  remove.rs  tests.rs
tests/files/: invalid.kubeconfig  localhost.kubeconfig  mixed.kubeconfig  test.kubeconfig
