[package]
name = "kubeconfig-bike-shed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
kube = { version = "0.82", features = ["config", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
humantime = "2.1.0"
env_logger = "0.10"
