[package]
name = "kubeconfig-bikeshed"
version = "0.1.1"
edition = "2021"

authors = ["Marvin Beckers <mail@embik.me>"]
description = """
kubeconfig-bikeshed (kbs) is an opinionated kubeconfig manager that helps
keeping the various kubeconfigs on your system at bay by importing them to 
a central store and normalizing them.
"""
documentation = "https://github.com/embik/kubeconfig-bikeshed"
homepage = "https://github.com/embik/kubeconfig-bikeshed"
repository = "https://github.com/embik/kubeconfig-bikeshed"
readme = "README.md"
keywords = ["kubernetes", "kubeconfig", "kubectl"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

exclude = [
    ".github/",
]

[[bin]]
path = "src/main.rs"
name = "kbs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
kube = { version = "0.82", features = ["config", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
humantime = "2.1.0"
env_logger = "0.10"
url = "2.4.1"
home = "0.5.5"
clap_complete = "4.4.4"
