[package]
name = "kubeconfig-bikeshed"
version = "0.3.2"
edition = "2021"

authors = ["Marvin Beckers <mail@embik.me>"]
description = """
kubeconfig-bikeshed (kbs) is an opinionated kubeconfig manager that helps
keeping the various kubeconfigs on your system at bay by importing them to 
a central store and normalizing them.
"""
documentation = "https://github.com/embik/kubeconfig-bikeshed"
homepage = "https://github.com/embik/kubeconfig-bikeshed"
repository = "https://github.com/embik/kubeconfig-bikeshed"
readme = "README.md"
keywords = ["kubernetes", "kubeconfig", "kubectl"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

exclude = [
    ".github/",
]

[[bin]]
path = "src/main.rs"
name = "kbs"

[[test]]
name = "integration"
path = "tests/tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
kube = { version = "0.95.0", features = ["config", "derive", "client"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.117"
log = "0.4"
humantime = "2.1.0"
env_logger = "0.10"
url = "2.5.0"
home = "0.5.5"
clap_complete = "4.5.2"
anyhow = "1.0.83"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
